# keylet

./: .gitignore  LICENSE  Makefile  README.md  TODO  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api.md  index.md  tkey.md
src/keylet/: __init__.py  _serial_hack.py  tkey.py  tkey_sign.py
src/keylet/resources/: __init__.py
tests/: conftest.py  test_device.py  test_tkey.py
