[project]
name = "keylet"
version = "0.2.0"
description = "Client application for Tillitis TKey hardware ML-DSA signer"
readme = "README.md"
authors = [
    { name = "Jussi Kukkonen", email = "jkukkonen@google.com" }
]
requires-python = ">=3.10"
dependencies = [
    "cryptography>=48.0.0",
    "pyserial>=3.5",
]

[project.scripts]
keylet = "keylet.bin.cli:main"

[project.urls]
Documentation = "https://jku.github.io/keylet/"
Homepage = "https://github.com/jku/keylet"
Issues = "https://github.com/jku/keylet/issues"
Source = "https://github.com/jku/keylet"

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "ruff",
    "zizmor",
    "zensical",
    "mkdocstrings[python]",
]

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "RUF",  # Ruff-specific rules
    "S",    # flake8-bandit (Security)
    "SIM",  # flake8-simplify
    "PT",   # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "TID",  # flake8-tidy-imports
    "T20",  # flake8-print
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
"src/keylet/bin/cli.py" = ["T201"]
"tests/**" = [
    "S101",   # Use of assert
    "S105",   # Possible hardcoded password
    "PT009",  # Use regular assert instead of unittest assertEqual
    "PT027",  # Use pytest.raises instead of unittest assertRaises
    "ARG002", # Unused method argument (common with mocks)
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "serial.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "device: tests that require a physical TKey device",
]
