[project]
name = "keylet"
version = "0.2.1-dev"
description = "Client application for Tillitis TKey hardware ML-DSA/Ed25519 signer"
readme = "README.md"
authors = [
    { name = "Jussi Kukkonen", email = "jkukkonen@google.com" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "cryptography>=48.0.0",
    "pyserial>=3.5",
]
keywords = ["ML-DSA", "TKey", "Tillitis", "PQC", "sign", "signer"]

[project.scripts]
keylet = "keylet.bin.cli:main"

[project.urls]
Documentation = "https://jku.github.io/keylet/"
Homepage = "https://github.com/jku/keylet"
Issues = "https://github.com/jku/keylet/issues"
Source = "https://github.com/jku/keylet"

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "ruff",
    "zizmor",
    "zensical",
    "mkdocstrings[python]",
    "types-pyserial",
]

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "BLE001",   # blind exception
    "PLR2004",  # magic value
    "COM812",   # trailing comma
    "D",        # pydocstyle
    "EM",       # flake8-errmsg
    "TRY003",   # long message in exception argument
    "PYI019"    # typing.Self is only available in >= 3.13
]

[tool.ruff.lint.per-file-ignores]
"src/keylet/bin/**" = [
    "T201"    # print is ok in CLI tool
]
"tests/**" = [
    "S101",   # assert is ok in tests
    "S105",   # hardcoded password is ok in tests
    "ARG002", # Unused method argument (common with mocks)
]

[tool.mypy]
python_version = "3.10"
pretty = true
strict = true
strict_equality = true
disallow_any_unimported = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest]
markers = [
    "device: tests that require a physical TKey device",
]
